# Praktikum2

./: CMakeLists.txt  main.c  zahlen.c  zahlen.h
